# coral_iron_turtle

./: .gitignore  CMakeLists.txt  web_server_worker.cpp  web_server_worker.h
pose_processing/pose_detector_src/: pose_detector_wrapper.cpp  pose_detector_wrapper.h
pose_processing/pose_param_detection_src/: pose_param_engine.cpp  pose_param_engine.h
process_camera/: rear_sight_webrtc_manipulation.cpp  rear_sight_webrtc_manipulation.h
process_camera/intel_realsense_camera/: realsense_processor.cpp  realsense_processor.h
process_camera/rear_sight_processor/: image_processing.h
pursuit_processor/: pursuit_processor.cpp  pursuit_processor.h
src/server_files/: index.js
turtle_manager/: smooth_turtle_manager.cpp
web_server/: web_server.cpp  web_server.h
